# cosmic-locale

./: CLAUDE.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
i18n/da/: cosmic_locale.ftl
i18n/de/: cosmic_locale.ftl
i18n/en/: cosmic_locale.ftl
i18n/es/: cosmic_locale.ftl
packaging/arch/: PKGBUILD
resources/: app.metainfo.xml  apply-locale-gen  dev.rabol.cosmic-locale.desktop  dev.rabol.cosmic-locale.metainfo.xml  dev.rabol.cosmic-locale.policy  dev.rabol.cosmic-locale.rules
resources/branding/: README.md
src/: app.rs  config.rs  locale.rs  main.rs
src/pages/: mod.rs
src/pages/current_locale/: mod.rs
src/pages/locale_categories/: mod.rs
src/pages/locale_management/: mod.rs
src/pages/welcome/: mod.rs
tests/: apply_locale_gen.rs
