[package]
name = "cosmic-locale"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
description = "An application to manage locale"
repository = "https://github.com/rabol/cosmic-locale"

[dependencies]
i18n-embed = { version = "0.16", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.10"
open = "5.3.2"
rust-embed = "8.8.0"
thiserror = "2"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
# Remove features if not needed.
features = [
    # About widget for the app
    "about",
    # On app startup, focuses an existing instance if the app is already open
    "single-instance",
    # Markdown widget
    "markdown",
    # QR code widget
    "qr_code",
    # GPU-accelerated rendering
    "wgpu",
    # xdg portal dialogs on Linux
    "xdg-portal"
]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
